--- a/oceanf/templates/home.html
+++ b/oceanf/templates/home.html
@@ -14,7 +14,7 @@
             </select>
 
             <div class="d-flex d-row align-items-center mt-1">
-                <label class="w-25 mr-3" for="pickUpDate" class="mt-1">Pickup Date</label>
+                <label class="w-25 mr-3" for="pickUpDate" class="mt-1">Pickup & End Date</label>
                 <input class="form-control" name="dates" type="text">
             </div>
             <div class="d-flex d-row justify-content-center mt-1">
