--- a/oceanf/templates/layout/navbar.html
+++ b/oceanf/templates/layout/navbar.html
@@ -4,7 +4,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container pt-3">
             <a class="navbar-brand" href="/">
-                <img src="{% static 'images/logo.png' %}" alt="">
+                <img src="{% static 'images/ocean_logo.jpeg' %}" alt="">
             </a>
             {% if user.is_authenticated %}
                 <p>Welcome! <a href="{% url 'profile' pk=user.id %}">{{ user.username }}</a></p>
